# weather

./: .gitignore  meson.build  run.sh
src/: api.c  api.h  jwt.c  jwt.h  main.c  output.c  output.h  parser.c  parser.h  utils.c  utils.h
subprojects/: jansson.wrap
